static/styles/mdp.scss
@import "../../../node_modules/angular-moment-picker/dist/angular-moment-picker.css";
@import "../../../node_modules/angular-moment-picker/dist/themes/material-ui.css";

$color-red : #ff3333;
$color-red--dark : #bf2626;
$color-red--light : #ffd6d6;

$color-brown: #9d8585;
$color-brown--dark: #330000;
$color-brown--light: #d6cccc;

$color-grey : #cbcbcb ;
$color-grey--dark : #808080 ;
$color-grey--light : #f2f2f2 ;

$color-black: #000000;

$color-news : #009999;
$color-news--light : #5cbdbd;

$color-projects : #ff6600;
$color-projects--light : #ffb685;

$color-events : #669900;
$color-events--light : #9dbd5c;

$color-white: #fff;

$color-yellow: #ffff00;

$color_list : (
        'news': $color-news,
        'news--light': $color-news--light,

        'projects': $color-projects,
        'project--light': $color-projects--light,
        'projects--light': $color-projects--light,
        'project': $color-projects,

        'challenges': $color-projects,
        'challenges--light': $color-projects--light,
        'challenge': $color-projects,

        'events': $color-events,
        'events--light': $color-events--light,
        'event--light': $color-events--light,
        'event': $color-events,

        'challenge--light': $color-brown--light,

        'red':$color-red,
        'red--dark':$color-red--dark,
        'red--light':$color-red--light,
        
        'brown':$color-brown,
        'brown--dark':$color-brown--dark,
        'brown--light':$color-brown--light,
        
        'grey':$color-grey,
        'grey--dark':$color-grey--dark,
        'grey--light':$color-grey--light,

        'profile--light':$color-red--light,
        'lovers':$color-red,
        'loved':$color-red,
        'matches':$color-red,

        'black':$color-black,
        'white':$color-white,
        'yellow':$color-yellow
);

/*
* BREAKPOINTS
*/

$ombreakpoints: (
  sm: (768px, 100%),
  md: (992px, 100%),
  ml: (1000px, 100%),
  lg: (1200px, 90%),
  xl: (1650px, 80%),
);

$sm : nth(map-get($ombreakpoints,'sm'),1);
$md : nth(map-get($ombreakpoints,'md'),1);
$ml : nth(map-get($ombreakpoints,'ml'),1);
$lg : nth(map-get($ombreakpoints,'lg'),1);
$xl : nth(map-get($ombreakpoints,'xl'),1);


/*
* TYPHOGRAPHY
*/

.light { font-weight: 300!important; }
.extra-light { font-weight: 200!important; }
.regular { font-weight: 400; }
.semi-bold { font-weight: 600!important; }
.bold { font-weight: 700; }
.italic {font-style: italic; }

.cairo { font-family: 'Cairo', sans-serif!important; }
.zilla { font-family: 'Zilla Slab', serif; }

h1,h2,h2,h4,h5,h6 {
  letter-spacing: 2px;
}


.text {
  &-highlight {
    color:$color-red!important;
  }
  &--darken {filter: brightness(0.8)!important;}
  &--darken--hover{
    &:hover { @extend .text--darken; }
  }
  &--high-content {
    font-size: 1.3rem!important;
    p { line-height: 2.3rem; }
  }
}

// GENERIC STYLES
.transparent {opacity:0; height:0; cursor:default;}

// BASE
body, html {

  @extend .zilla;
  font-size:12px;

  background-color: $color-grey--light;
  height: 100%;
  width: 100%;
  color: #333;
  font-weight: 400;

  @media all and (max-width: $sm) { font-size:14px;}
  @media all and (min-width: $sm) { font-size:12px; }
  @media all and (min-width: $md) { font-size:10px; }
  @media all and (min-width: $lg) { font-size:10px ; }
  @media all and (min-width: $xl) { font-size:12px ; }

  &.disable-scroll {
    width:100vw!important; height:100vh!important;
    max-width:100vw!important; max-height:100vh!important;
    min-width:100vw!important; min-height:100vh!important;
    overflow: hidden;
  }

}
.row {
  &--no-margin { margin-left:0; margin-right: 0; }
}
.container {

  // hack bootstrap container
  @each $size,$bk in $ombreakpoints {
    @media screen and (min-width: #{nth($bk, 1)}) {
      width: #{ nth($bk, 2 )};
    }
  }
  @media all and ( max-width:$sm ) {
    margin-right: 0;
    margin-left: 0;
    padding-left: 0;
    padding-right: 0;
    width: 100%
  }
  &--main {

    @media all and ( max-width:1622px ) {
      width:98%;margin:0 1%; padding:0;
    }
  }

}
footer {

  * { color: $color-white;}
  min-height: 40px;
  z-index: 500000000;
  position: relative;
  display: flex; flex-direction: row; justify-content: center; align-items: center;
  min-width: 100vw;
  max-width: 100vw;

  .footer__copy {
    text-align: left; margin:0;
    a {
      white-space:nowrap;
      &:active, &:hover, &:focus { color:$color-red!important; }
    }
  }

}

header .navbar.navbar-default{

  padding: 0!important;
  padding-top:10px!important;

  &, & *:not(.glyphicon):not(.fa):not(.far):not(.fas) { @extend .cairo; }
  i, span {
    &.fa, &.fas, &.far { font-weight: 900!important; }
  }

  a { text-transform: uppercase; font-size: 1.2em;}

  .navbar-toggle{
    .icon-bar { background-color:$color-white!important; }
  }
  .navbar-header{ margin:0;}

  .friends{
    $friends-padding:2px!important;

    & > *:not(:first-child):not(:last-child) {
      padding-left: $friends-padding;
      padding-right: $friends-padding;
      a{
        padding-left: $friends-padding;
        padding-right: $friends-padding;
      }
    }

    & > *:first-child{
      padding-right: $friends-padding;
      a{ padding-right: $friends-padding;  }
    }
    @media all and(min-width: $sm){
      & > *:last-child{
        padding-left: $friends-padding;
        a{ padding-left: $friends-padding;  }
      }
    }

  }
  .navbar-nav.navbar-right { padding-left:2%; padding-right:2%;}
}

.om-main-wrapper {
  position: relative;
  min-width: 100vw;
  max-width: 100vw;
  min-height: 100vh;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;

  .page-title {
    @extend .cairo; @extend .light; font-size:2.5rem;
    & , & * { text-transform: uppercase;}
  }

}

main {
  display:flex;
  & > * {display: flex;flex-grow:1;}
}
/* ... */

